--- a/DotnetFinancialTrackerApp/Components/UI/UiButton.razor
+++ b/DotnetFinancialTrackerApp/Components/UI/UiButton.razor
@@ -22,7 +22,7 @@
 @code {
     [Parameter] public RenderFragment? ChildContent { get; set; }
     [Parameter] public Variant Variant { get; set; } = Variant.Filled;
-    [Parameter] public Color Color { get; set; } = Color.Dark;
+    [Parameter] public Color Color { get; set; } = Color.Default;
     [Parameter] public bool Disabled { get; set; }
     [Parameter] public EventCallback<MouseEventArgs> OnClick { get; set; }
     [Parameter] public bool FullWidth { get; set; }
