--- a/DotnetFinancialTrackerApp/Components/UI/UiStatCard.razor
+++ b/DotnetFinancialTrackerApp/Components/UI/UiStatCard.razor
@@ -49,6 +49,39 @@
     </MudCardContent>
 </MudCard>
 
+<style>
+    /*.summary-card.ui-stat-card {*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*    justify-content: space-between;*/
+    /*    height: 100%;*/
+    /*}*/
+
+    /*.stat-card-header {*/
+    /*    display: flex;*/
+    /*    align-items: center;*/
+    /*    margin-bottom: 0.5rem;*/
+    /*}*/
+    
+    /*.stat-card-header .mud-icon {*/
+    /*    margin-right: 0.5rem;*/
+    /*}*/
+    
+    /*.stat-card-body {*/
+    /*    flex-grow: 1;*/
+    /*    display: flex;*/
+    /*    flex-direction: column;*/
+    /*    justify-content: center;*/
+    /*    align-items: center;*/
+    /*    text-align: center;*/
+    /*}*/
+    
+    /*.stat-card-footer {*/
+    /*    margin-top: 0.5rem;*/
+    /*    text-align: center;*/
+    /*}*/
+</style>
+
 @code {
     [Parameter] public string Title { get; set; } = string.Empty;
     [Parameter] public string? Icon { get; set; }
